Fix formatting and improve vscode settings

--- a/roles/dotfiles/files/vscode/settings.json
+++ b/roles/dotfiles/files/vscode/settings.json
@@ -3,19 +3,25 @@
     "breadcrumbs.enabled": false,
     "editor.fontFamily": "'Fira Code', Consolas, 'Droid Sans Mono', monospace",
     "editor.fontLigatures": true,
-    //"editor.fontSize": 15,
+    "editor.fontSize": 14,
     "editor.formatOnSave": true,
-    "editor.lineHeight": 28,
+    "editor.lineHeight": 24,
     "editor.minimap.enabled": true,
     "editor.minimap.renderCharacters": false,
     "editor.renderIndentGuides": true,
     "editor.renderWhitespace": "boundary",
+    "editor.rulers": [
+        80,
+        100,
+        120
+    ],
     "editor.scrollBeyondLastLine": false,
     "emmet.includeLanguages": {
         "aspnetcorerazor": "html",
         "visualforce": "html",
         "vue-html": "html"
     },
+    "emmet.triggerExpansionOnTab": true,
     "eslint.alwaysShowStatus": true,
     "extensions.ignoreRecommendations": true,
     "files.associations": {
@@ -24,6 +30,10 @@
     "files.exclude": {
         // "**/*-meta.xml": false
     },
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "files.trimTrailingWhitespace": true,
+    // "salesforcedx-vscode-core.java.home": "",
     // "salesforcedx-vscode-core.telemetry.enabled": false,
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
@@ -35,11 +45,14 @@
     "[ansible]": {
         "editor.tabSize": 2
     },
+    "[css]": {
+        "editor.tabSize": 2
+    },
     "[html]": {
-        "editor.tabSize": 4
+        "editor.tabSize": 2
     },
     "[javascript]": {
-        "editor.tabSize": 4
+        "editor.tabSize": 2
     },
     "[json]": {
         "editor.tabSize": 4
@@ -47,5 +60,8 @@
     "[jsonc]": {
         "editor.tabSize": 4,
         "editor.defaultFormatter": "vscode.json-language-features"
-    }
+    },
+    // "[visualforce]": {
+    //     "editor.tabSize": 2
+    // }
 }
